  to force a compilation (i.e. User.addresses == 7 will compile all
  mappers; this is [ticket:758]).  The only caveat here is that 
  an inheriting mapper now looks for its inherited mapper upon construction;
  so mappers within inheritance relationships need to be constructed in
  inheritance order (which should be the normal case anyway).

0.4.0beta5
----------

- connection pool fixes; the better performance of beta4
  remains but fixes "connection overflow" and other bugs
  which were present (like [ticket:754])
  
- fixed bugs in determining proper sync clauses from custom inherit
  conditions [ticket:769]
  
- Extended 'engine_from_config' coercion for QueuePool size / overflow.
  [ticket:763]

- mysql views can be reflected again. [ticket:748]

- AssociationProxy can now take custom getters and setters.

- Fixed malfunctioning BETWEEN in orm queries.

- Fixed OrderedProperties pickling [ticket:762]

- SQL-expression defaults and sequences now execute "inline" for all non-primary key
  columns during an INSERT or UPDATE, and for all columns during an executemany()-style 
  call. inline=True flag on any insert/update statement also forces the same 
  behavior with a single execute().  result.postfetch_cols() is a collection of columns
  for which the previous single insert or update statement contained a SQL-side 
  default expression.

- fixed PG executemany() behavior, [ticket:759]

- postgres reflects tables with autoincrement=False for primary key
  columns which have no defaults.
    
- postgres no longer wraps executemany() with 
  individual execute() calls, instead favoring performance.  
  "rowcount"/"concurrency" checks with deleted items (which use executemany) 
  are disabled with PG since psycopg2 does not report proper rowcount for 
  executemany().
  
- Tickets fixed:

  - [ticket:742]
  - [ticket:748]
  - [ticket:760]
  - [ticket:762]
  - [ticket:763]

0.4.0beta4
----------
